<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student schedule</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit Class</string>
    <string name="cd">Content Description</string>
    <string name="done">Done</string>
    
    
    <string name="zero">Null</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    
    <string name="lecture">Lecture</string>
    <string name="labs">Labs</string>
    <string name="practice">Practice</string>
    
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="auditory">Auditory</string>
    <string name="class_type">Class Type</string>
    <string name="class_time">Class Time</string>
    <string name="class_number">Class Number</string>
    
    <string name="comments">Comments</string>
    
    <string name="action_edit">Edit</string>
    <string name="delete">Delete</string>

</resources>