<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="252dp"
            android:layout_y="22dp"
            android:text="Day"
            android:textSize="26sp" />

        <RadioGroup
            android:id="@+id/radio_class_numbers"
            android:layout_width="558dp"
            android:layout_height="90dp"
            android:layout_x="3dp"
            android:layout_y="131dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/null_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:checked="true"
                android:text="@string/zero" />

            <RadioButton
                android:id="@+id/first_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/first" />

            <RadioButton
                android:id="@+id/second_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/second" />

            <RadioButton
                android:id="@+id/third_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/third" />

            <RadioButton
                android:id="@+id/fourth_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fourth" />

            <RadioButton
                android:id="@+id/fifth_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fifth" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="63dp"
            android:layout_y="84dp"
            android:text="@string/class_number"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="486dp"
            android:layout_height="wrap_content"
            android:layout_x="51dp"
            android:layout_y="180dp" >

            <LinearLayout
                android:layout_width="199dp"
                android:layout_height="181dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="0.42"
                    android:text="@string/subject" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="0.42"
                    android:text="@string/teacher" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="0.18"
                    android:text="@string/auditory" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="213dp"
                android:layout_height="215dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/subject_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/teacher_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/auditory_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_week_type"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_x="1dp"
            android:layout_y="400dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/numerator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:checked="true"
                android:text="@string/numerator" />

            <RadioButton
                android:id="@+id/denominator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="@string/denominator" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_class_type"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_x="5dp"
            android:layout_y="460dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:checked="true"
                android:text="@string/lecture" />

            <RadioButton
                android:id="@+id/labs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/labs" />

            <RadioButton
                android:id="@+id/practice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/practice" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="55dp"
            android:layout_y="520dp"
            android:imeOptions="actionDone"
            android:text="@string/comments"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="489dp"
            android:layout_height="208dp"
            android:layout_x="56dp"
            android:layout_y="540dp"
            android:ems="10"
            android:gravity="center_vertical|top"
            android:inputType="textMultiLine"
            android:maxLines="10" />
    </AbsoluteLayout>

</ScrollView>