<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/list_item_selector">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_class_number_week_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/class_number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_class_time_week_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/class_time"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/vertical_divider_first"
            style="@style/listViewVerticalDivider"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/numerator"
            android:layout_width="400dp"
            android:layout_height="99dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/item_subject_numerator"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/subject"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_class_type_numerator"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/class_type"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_teacher_numerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/teacher"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_auditory_numerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/auditory"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_comments_numerator"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/comments"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/horizontal_divider_first"
            style="@style/listViewHorizontalDivider"
            android:layout_width="fill_parent" />

        <LinearLayout
            android:id="@+id/denominator"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:layout_weight="0.14"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/item_subject_denominator"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/subject"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_class_type_denominator"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/class_type"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_teacher_denominator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/teacher"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_auditory_denominator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/auditory"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_comments_denominator"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:text="@string/comments"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="135dp"
        android:layout_height="200dp"
        android:orientation="horizontal" >

            <View
                android:id="@+id/vertical_divider_second"
                style="@style/listViewVerticalDivider"
                android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/layout_edit_buttons"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_edit_numerator"
                    style="@style/listViewItemButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:contentDescription="@string/cd"
                    android:src="@drawable/ic_action_edit" />

                <ImageButton
                    android:id="@+id/button_delete_numerator"
                    style="@style/listViewItemButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:contentDescription="@string/cd"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

                <View
            android:id="@+id/horizontal_divider_second"
            style="@style/listViewHorizontalDivider"
            android:layout_width="fill_parent" />
        
			<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/button_edit_denominator"
                    style="@style/listViewItemButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:contentDescription="@string/cd"
                    android:src="@drawable/ic_action_edit" />

                <ImageButton
                    android:id="@+id/button_delete_denominator"
                    style="@style/listViewItemButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:contentDescription="@string/cd"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
 
</LinearLayout>